--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm",
+    "com.jetbrains.riderflow": "2022.1.4-246",
     "com.leopotam.ecslite": "https://github.com/Leopotam/ecslite.git",
     "com.leopotam.ecslite.di": "https://github.com/Leopotam/ecslite-di.git",
     "com.leopotam.ecslite.extendedsystems": "https://github.com/Leopotam/ecslite-extendedsystems.git",
@@ -8,7 +9,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.6.6",
     "com.unity.cinemachine": "2.8.9",
-    "com.unity.collab-proxy": "1.17.2",
+    "com.unity.collab-proxy": "1.17.6",
     "com.unity.collections": "1.2.4",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.16",
@@ -17,8 +18,9 @@
     "com.unity.jobs": "0.50.0-preview.9",
     "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.probuilder": "5.0.6",
-    "com.unity.recorder": "2.5.7",
-    "com.unity.shadergraph": "12.1.7",
+    "com.unity.progrids": "3.0.3-preview.6",
+    "com.unity.recorder": "3.0.3",
+    "com.unity.shadergraph": "12.1.8",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
@@ -39,7 +41,6 @@
     "com.unity.modules.physics2d": "1.0.0",
     "com.unity.modules.screencapture": "1.0.0",
     "com.unity.modules.terrain": "1.0.0",
-    "com.unity.progrids":"3.0.3-preview.6",
     "com.unity.modules.terrainphysics": "1.0.0",
     "com.unity.modules.tilemap": "1.0.0",
     "com.unity.modules.ui": "1.0.0",
@@ -56,5 +57,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "JetBrains",
+      "url": "https://npm.pkg.jetbrains.space/public/p/jetbrains-gamedev/jetbrains-gamedev/",
+      "scopes": [
+        "com.jetbrains"
+      ]
+    }
+  ]
 }
